--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Arco Design Pro - 开箱即用的中台前端/设计解决方案</title>
+    <title>Gravity高效教辅平台</title>
   </head>
   <body>
     <div id="root"></div>
